--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+div.telegram-login-widget:first-child {
+  background-color: #242424;
+}
